--- a/results.html
+++ b/results.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-<script src="rim.js" type="text/javascript"></script>
+
+
+<script src="assets/js/rim.js" type="text/javascript"></script>
 <script type="text/javascript">
 window.onload = function()
 {
