--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
+<!--  <script src="/rim.js" type="text/javascript"></script> --> 
 <script src="assets/js/rim.js" type="text/javascript"></script>
 
 <html>
@@ -20,7 +21,7 @@
   </br>
   </br>
   </br>
-  <form name ="submit_rim" action="results.html">
+  <form action="javascript:;" onsubmit="return showFormElements(this);">
 
   <div align="center">
   <i class="fas fa-search fa-7x" style="color: white" align="center"></i>
@@ -36,7 +37,7 @@
 
   </br>
   <div align="center">
-    <input type="button" class="btn btn-outline-primary btn-lg btn-block" name="submit" value="Buscar" onclick="showFormElements(this.form);"/>
+    <input type="button" class="btn btn-outline-primary btn-lg btn-block" name="submit" value="Buscar"  onclick="showFormElements(this.form);"/>
 </div>
 </br>
 </br>
