--- a/results.html
+++ b/results.html
@@ -8,7 +8,9 @@
 
 
 
+<!--  <script src="/rim.js" type="text/javascript"></script> -->
 <script src="assets/js/rim.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 window.onload = function()
 {
