--- a/results.html
+++ b/results.html
@@ -27,11 +27,17 @@ window.onload = function()
 
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <title>TusRimas.com</title>
 </head>
 <body style="background-color: gray">
 
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
+    <h1>Tus Resultados: </h1>
+    </br>
+    </br>
 <h1 id="wordH" href = test.html></h1>
 </div>
 
