--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-<!--  <script src="/rim.js" type="text/javascript"></script> --> 
+<!--  <script src="/rim.js" type="text/javascript"></script> -->
 <script src="assets/js/rim.js" type="text/javascript"></script>
 
 <html>
 <head>
   <title>TusRimas.com</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
+
 <body style="background-color: gray">
 
+
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
+
   </br>
   </br>
   </br>
