--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 <!--  <script src="/rim.js" type="text/javascript"></script> -->
-<script src="{{ base_url }}/assets/js/rim.js" type="text/javascript"></script>
+<script src="/TusRimas/assets/js/rim.js" type="text/javascript"></script>
 
 <html>
 <head>
