--- a/results.html
+++ b/results.html
@@ -9,7 +9,7 @@
 
 
 <!--  <script src="/rim.js" type="text/javascript"></script> -->
-<script src="assets/js/rim.js" type="text/javascript"></script>
+<script src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" type="text/javascript"></script>
 
 <script type="text/javascript">
 window.onload = function()
