--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
 <!--  <script src="/rim.js" type="text/javascript"></script> -->
-<script src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" type="text/javascript"></script>
+<script type="text/plain" src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" type="text/javascript"></script>
 
 <html>
 <head>
