--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
 
-<!--  <script src="/rim.js" type="text/javascript"></script> -->
-<script type="text/plain" src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" ></script>
-
+ <script src="rim.js" type="text/javascript"></script>
+<!--
+<script src="/rim.js" type="text/javascript"></script>
+ <script type="text/plain" src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" ></script>
+-->
 <html>
 <head>
   <title>TusRimas.com</title>
