--- a/results.html
+++ b/results.html
@@ -8,9 +8,12 @@
 
 
 
-<!--  <script src="/rim.js" type="text/javascript"></script> -->
-<script type="text/plain" src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" type="text/javascript"></script>
-
+ <script src="/rim.js" type="text/javascript"></script>
+ <script src="rim.js" type="text/javascript"></script>
+<!--
+<script src="/rim.js" type="text/javascript"></script>
+<script type="text/plain" src="https://raw.githubusercontent.com/forcesk/TusRimas.com/master/rim.js" ></script>
+-->
 <script type="text/javascript">
 window.onload = function()
 {
