Se ajustó la imagen y algunas correcciones menores

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body style="background-color: gray">
+<body style="background-color: black">
 
 
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
@@ -28,25 +28,30 @@
   </br>
   </br>
   </br>
-  </br>
+
   <form action="javascript:;" onsubmit="return showFormElements(this);">
 
   <div align="center">
   <i class="fas fa-search fa-7x" style="color: white" align="center"></i>
 </div>
 </br>
-<h1 class="display-4 animated infinite bounce delay-2s" align="center" style="color: white">TusRimas.com</h1>
+<h1 class="display-4 animated infinite bounce delay-2s" align="center" style="color: white ;font-size:10vw;">TusRimas.com</h1>
 
-
-
+</br>
 
   <label for="exampleFormControlFile1"></label>
   <input class="form-control" id="GetSearch">
 
+</br>
   </br>
-  <div align="center">
-    <input type="button" class="btn btn-outline-primary btn-lg btn-block" name="submit" value="Buscar"  onclick="showFormElements(this.form);"/>
-</div>
+
+
+
+    <div>
+    <input type="button" class="btn btn-outline-danger btn-lg btn-block" name="submit" value="Buscar"  onclick="showFormElements(this.form);"/>
+  </div>
+
+
 </br>
 </br>
 </br>
