--- a/results.html
+++ b/results.html
@@ -8,7 +8,6 @@
 
 
 
- <script src="/rim.js" type="text/javascript"></script>
  <script src="rim.js" type="text/javascript"></script>
 <!--
 <script src="/rim.js" type="text/javascript"></script>
@@ -35,13 +34,33 @@ window.onload = function()
 
   <title>TusRimas.com</title>
 </head>
-<body style="background-color: gray">
+<body style="background-color: black">
 
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
-    <h1>Tus Resultados: </h1>
+  </br>
+  </br>
+    <h1 style="color: white">Tus Resultados: </h1>
     </br>
     </br>
-<h1 id="wordH" href = test.html></h1>
+<h1  style="color: white" id="wordH" href = test.html></h1>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+<div class="col" align="right">
+<a href="index.html" class="btn btn-outline-primary" >Regresar</a>
+</br>
+</br>
+</br>
+</br>
+
+</div>
+
 </div>
 
 
