Se compuso el fondo responsivo

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
 </head>
 
-<body style="background-color: black">
+<body style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg');min-height: 100%">
 
 
-  <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
+  <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg');min-height: 100%" >
 
   </br>
   </br>
-  </br>
-  </br>
+
 
   <form action="javascript:;" onsubmit="return showFormElements(this);">
 
@@ -35,7 +34,7 @@
   <i class="fas fa-search fa-7x" style="color: white" align="center"></i>
 </div>
 </br>
-<h1 class="display-4 animated infinite bounce delay-2s" align="center" style="color: white ;font-size:10vw;">TusRimas.com</h1>
+<h1 class="display-4 animated infinite bounce delay-1s" align="center" style="color: white ;font-size:10vw;">TusRimas.com</h1>
 
 </br>
 
@@ -46,22 +45,33 @@
   </br>
 
 
+    <div class="row">
+      <div class="col-3">
+      </div>
 
-    <div>
+    <div class="col-6 xs-12 md-12" align="center">
     <input type="button" class="btn btn-outline-danger btn-lg btn-block" name="submit" value="Buscar"  onclick="showFormElements(this.form);"/>
+
+  </div>
+
+  <div class="col-3">
+
+  </div>
+
   </div>
 
 
+
+
+
 </br>
 </br>
-</br>
-</br>
-</br>
-  <hr class="my-4">
+
 </form>
 
 </div>
 </div>
+  <p align="right" style="color: gray ;font-size:1vw;">2019 - Emmanuel Castillo - </p>
 
 </body>
 </html>
