--- a/results.html
+++ b/results.html
@@ -34,7 +34,7 @@ window.onload = function()
 
   <title>TusRimas.com</title>
 </head>
-<body style="background-color: black">
+<body style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg');min-height: 100%">
 
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
   </br>
@@ -48,16 +48,12 @@ window.onload = function()
 </br>
 </br>
 </br>
-</br>
-</br>
-</br>
+
 
 <div class="col" align="right">
 <a href="index.html" class="btn btn-outline-primary" >Regresar</a>
-</br>
-</br>
-</br>
-</br>
+
+
 
 </div>
 
