Ahora se muestran pequeñas frases y la frase buscada en los resultados

--- a/results.html
+++ b/results.html
@@ -23,6 +23,7 @@ window.onload = function()
   //var finalSplitText = allW.split("_");
   //var splitText = finalSplitText[0];
   document.getElementById("wordH").innerHTML=allW;
+  document.getElementById("wordI").innerHTML=word;
 }
 
 </script>
@@ -39,10 +40,10 @@ window.onload = function()
   <div class="jumbotron" style="background-image: url('https://m.media-amazon.com/images/G/31/digital/music/merch/India/2018/LandingPages/MarketingLandingPage/MLP_BG_1X.jpg')">
   </br>
   </br>
-    <h1 style="color: white">Tus Resultados: </h1>
+    <h1 style="color: white">Tus Resultados: </h1>  <h1 style="color: white" id="wordI">" "</h1>
     </br>
     </br>
-<h1  style="color: white" id="wordH" href = test.html></h1>
+<h2  style="color: white" id="wordH" href = test.html></h2>
 </br>
 </br>
 </br>
