Se agregó placeholder y se cambió de color el botón de resultados

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ ga('send', 'pageview');
 </br>
 
   <label for="exampleFormControlFile1"></label>
-  <input class="form-control" id="GetSearch">
+  <input class="form-control" id="GetSearch" placeholder="Escribe una palabra...">
 
 </br>
   </br>
