--- a/results.html
+++ b/results.html
@@ -50,9 +50,9 @@ window.onload = function()
 </br>
 </br>
 
-
+<hr/>
 <div class="col" align="right">
-<a href="index.html" class="btn btn-outline-primary" >Regresar</a>
+<a href="index.html" class="btn btn-outline-danger" >Regresar</a>
 
 
 
